prepare jakarta and java21